--- a/Wearable/src/main/res/values/strings.xml
+++ b/Wearable/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="analog_complication">Sample Analog</string>
     <string name="digital_name">Antonio-Marvin</string>
 
-    <string name="digital_background_color">Background color</string>
+    <string name="digital_background_color">Backgrounds</string>
     <string name="digital_config_name">Digital watch face configuration</string>
     <string name="digital_am">AM</string>
     <string name="digital_pm">PM</string>
@@ -41,12 +41,12 @@
 
     <!-- TODO: this should be shared (needs covering all the samples with Gradle build model) -->
     <string name="color_black">Black</string>
-    <string name="color_blue">Blue</string>
-    <string name="color_gray">Gray</string>
-    <string name="color_green">Green</string>
-    <string name="color_navy">Navy</string>
-    <string name="color_red">Red</string>
+    <string name="color_grey">Grey</string>
+    <string name="color_yellow">Yellow</string>
     <string name="color_white">White</string>
+    <string name="color_red">Red</string>
+    <string name="color_blue">Blue</string>
+    <string name="color_green">Green</string>
 
     <string name="analog_complication_config">Configure Watchface Complications</string>
     <string name="add_complication">Add Complication</string>
@@ -54,11 +54,11 @@
 
     <string-array name="color_array">
         <item>@string/color_black</item>
-        <item>@string/color_blue</item>
-        <item>@string/color_gray</item>
-        <item>@string/color_green</item>
-        <item>@string/color_navy</item>
-        <item>@string/color_red</item>
+        <item>@string/color_grey</item>
+        <item>@string/color_yellow</item>
         <item>@string/color_white</item>
+        <item>@string/color_red</item>
+        <item>@string/color_green</item>
+        <item>@string/color_blue</item>
     </string-array>
 </resources>
